syntax = "proto3";

option csharp_namespace = "PlantBasedPizza.Payments";

package payment;

service Payment {
  rpc TakePayment (TakePaymentRequest) returns (TakePaymentsReply);
}

message TakePaymentRequest {
  string customerIdentifier = 1;
  double paymentAmount = 2;
  string orderIdentifier = 3;
}

message TakePaymentsReply {
  string paymentStatus = 1;
  bool isSuccess = 2;
}
